# test_task_project

./: README.md  makefile  pyproject.toml  requirements.txt  setup.cfg
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py
task_manager/templates/: base.html  index.html  login.html  statuses.html  tasks.html  users.html
task_manager/templates/statuses/: create_status.html  update_status.html
task_manager/templates/tasks/: create_task.html
task_manager/templates/users/: delete_user.html  register.html  update_user.html
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_home.py
