[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["LeonidBabkin <babkinleo@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django-bootstrap4 = "^23.1"
django = "^4.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
django-bootstrap-form = "^3.4"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
